--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Raleway&display=swap");
 
 /* set up three.js canvas */
 canvas {
@@ -19,7 +19,7 @@ body {
   padding: 0;
   margin: 0;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 h1 {
@@ -71,7 +71,7 @@ nav {
 
 main {
   display: grid;
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: 2fr repeat(5, 1fr);
   text-shadow: 0px 3px 17px rgba(0, 0, 0, 1), 0px 3px 20px rgba(0, 0, 0, 1);
 }
 
@@ -124,7 +124,7 @@ main {
   box-shadow: 1px 11px 39px 14px rgba(0, 0, 0, 0.55);
 }
 
-.cabin-section {
+/* .cabin-section {
   grid-row: 3/4;
   display: flex;
   flex-direction: column;
@@ -142,4 +142,94 @@ main {
 .cabin-images > img {
   width: 400px;
   margin: 20px;
+} */
+
+.cabin-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.cabin-images {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  display: grid;
+
+  /* grid-template-rows: repeat(4fr);
+  grid-template-columns: repeat(5fr); */
+
+  grid-template-columns: 3fr 4fr 3fr 4fr 2fr 4fr 2fr 5fr; /*8col*/
+  grid-template-rows: 2fr 2fr 2fr 4fr 5fr 2fr;
+
+  max-width: 800px;
+}
+
+.cabin-images > img {
+  width: 200px;
+  margin: 10px;
+  box-shadow: 1px 11px 39px 14px rgba(0, 0, 0, 0.55);
+  transition: 0.4s ease-in-out;
+}
+
+@media (max-width: 700px) {
+  .cabin-images > img {
+    width: 150px;
+  }
+}
+
+@media (max-width: 525px) {
+  .cabin-images > img {
+    width: 100px;
+  }
+}
+
+@media (max-width: 425px) {
+  .cabin-images > img {
+    width: 200px;
+  }
+  .cabin-images {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 1400px) {
+  .cabin-images > img {
+    width: 300px;
+  }
+  .cabin-images {
+    max-width: 1000px;
+  }
+}
+
+.cabin-images > img:hover {
+  transform: scale(1.3);
+  transition: 0.4s ease-in-out;
+}
+
+.cabin-1 {
+  grid-row: 3 / span 2;
+  grid-column: 2 / span 2;
+}
+.cabin-2 {
+  grid-row: 4 / span 2;
+  grid-column: 3 / span 2;
+}
+.cabin-3 {
+  grid-row: 1 / span 4;
+  grid-column: 4 / span 2;
+}
+.cabin-4 {
+  grid-row: 2 / span 2;
+  grid-column: 6 / span 2;
+}
+.cabin-5 {
+  grid-row: 5 / span 1;
+  grid-column: 5 / span 2;
+}
+.cabin-6 {
+  grid-row: 4 / span 1;
+  grid-column: 5 / span 2;
 }
