--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Raleway&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 /* set up three.js canvas */
 canvas {
@@ -14,12 +15,17 @@ canvas {
   box-sizing: border-box;
 }
 
+:root {
+  --accent-color: rgb(253, 209, 138);
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   color: white;
   font-family: "Raleway", sans-serif;
+  font-size: 1rem;
 }
 
 h1 {
@@ -43,7 +49,7 @@ body {
   background-attachment: fixed;
 }
 
-/* styling the actual html */
+/* styling the html */
 
 nav {
   display: flex;
@@ -54,7 +60,6 @@ nav {
   right: 0;
   padding: 100px 100px 20px;
   background: rgba(0, 0, 0, 0.5);
-  /* box-shadow: 1px 8px 34px 8px rgba(0, 0, 0, 0.5);*/
   box-shadow: 1px 11px 39px 14px rgba(0, 0, 0, 0.55);
   z-index: 1;
 }
@@ -62,17 +67,88 @@ nav {
 .nav-items {
   display: flex;
   width: 40vw;
+  max-width: 800px;
   justify-content: space-between;
+}
+
+.nav-items p {
+  transition: 0.4s ease-in-out;
+}
+
+.nav-items p:hover {
+  cursor: pointer;
+  color: var(--accent-color);
+  transition: 0.4s ease-in-out;
 }
 
 .logo {
   height: 60px;
 }
 
+/* #close-menu {
+  display: none;
+}
+
+.hamburger-menu {
+  background: url("./images/menu.svg");
+  height: 40px;
+  width: 40px;
+  background-size: 40px;
+  margin: 20px;
+  margin-right: 40px;
+  display: none; so it doesn't show up at desktop size */
+
+/* grid */
+/* grid-column: 2/3;
+  grid-row: 1/2;
+  justify-self: end;
+  align-self: center;
+}
+
+#close-menu {
+  background: url("./images/close.svg");
+  height: 30px;
+  width: 30px;
+  background-size: 30px;
+  display: none;
+  align-self: flex-end;
+  margin: 15px;
+}
+
+@media (max-width: 600px) {
+  .menu-open {
+    transform: translateX(-250px);
+    transition: 0.2s ease-in-out;
+    z-index: 1;
+  }
+
+  .menu-close {
+    transform: translateX(0px);
+    transition: 0.2s ease-in-out;
+  }
+
+  .hamburger-menu,
+  #close-menu {
+    display: block;
+  }
+} */
+
 main {
   display: grid;
-  grid-template-rows: 2fr repeat(5, 1fr);
+  grid-template-rows: 110vh repeat(4, auto);
+  /* grid-template-rows: repeat(5fr); */
   text-shadow: 0px 3px 17px rgba(0, 0, 0, 1), 0px 3px 20px rgba(0, 0, 0, 1);
+  padding: 0 40px;
+}
+
+/* @media (max-width: 500px) {
+  main {
+    grid-template-rows: 100vh repeat(4, 60vh);
+  }
+} */
+
+section {
+  margin: 200px 0;
 }
 
 .main-title-section {
@@ -82,12 +158,14 @@ main {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  margin-top: 0;
 }
 
 .main-title {
   text-shadow: 0px 3px 17px rgba(0, 0, 0, 1), 0px 3px 20px rgba(0, 0, 0, 1);
   font-size: 3rem;
   font-family: "Nothing You Could Do", cursive;
+  text-align: center;
 
   animation: fade ease-in-out 4s;
   animation-iteration-count: infinite;
@@ -105,6 +183,8 @@ main {
   }
 }
 
+/* about section */
+
 .about-section {
   grid-row: 2/3;
 
@@ -115,36 +195,35 @@ main {
 }
 
 .about-text-container {
-  margin: 20px;
   max-width: 40ch;
 }
 
-.about-img {
-  width: 300px;
+.about-img-container {
+  max-width: 500px;
   box-shadow: 1px 11px 39px 14px rgba(0, 0, 0, 0.55);
+  margin-left: 30px;
 }
 
-/* .cabin-section {
-  grid-row: 3/4;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 30vh;
+.about-img-container img {
+  width: 100%;
 }
 
-.cabin-images {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 900px) {
+  .about-section {
+    flex-direction: column;
+  }
+  .about-text-container {
+    max-width: 50ch;
+  }
+  .about-img-container {
+    margin: 0;
+  }
 }
-
-.cabin-images > img {
-  width: 400px;
-  margin: 20px;
-} */
+/* cabin section */
 
 .cabin-section {
+  grid-row: 3/4;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -160,7 +239,7 @@ main {
   /* grid-template-rows: repeat(4fr);
   grid-template-columns: repeat(5fr); */
 
-  grid-template-columns: 3fr 4fr 3fr 4fr 2fr 4fr 2fr 5fr; /*8col*/
+  grid-template-columns: 3fr 4fr 3fr 4fr 2fr 4fr 2fr 5fr;
   grid-template-rows: 2fr 2fr 2fr 4fr 5fr 2fr;
 
   max-width: 800px;
@@ -205,7 +284,7 @@ main {
 }
 
 .cabin-images > img:hover {
-  transform: scale(1.3);
+  transform: scale(1.4);
   transition: 0.4s ease-in-out;
 }
 
@@ -232,4 +311,109 @@ main {
 .cabin-6 {
   grid-row: 4 / span 1;
   grid-column: 5 / span 2;
+}
+
+/* map section */
+
+.map-section {
+  grid-row: 4/5;
+
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.map-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 800px;
+
+  transition: 0.4s ease-in-out;
+}
+
+.map-container:hover {
+  transform: scale(1.6);
+  transition: 0.4s ease-in-out;
+}
+
+.map-container img {
+  width: 100%;
+}
+
+@media (max-width: 1350px) {
+  .map-container:hover {
+    transform: scale(1);
+    transition: 0.4s ease-in-out;
+  }
+}
+
+/* reserve */
+
+.reserve-section {
+  grid-row: 5/6;
+
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.reserve-section button {
+  background: rgba(0, 0, 0, 0.7);
+  box-shadow: 1px 11px 39px 14px rgba(0, 0, 0, 0.55);
+  border: 2px solid #fff;
+  border-radius: 10px;
+  color: white;
+  padding: 1rem 2rem;
+  cursor: pointer;
+
+  transition: 0.4s ease-in-out;
+}
+
+@media (max-width: 550px) {
+  .reserve-section button {
+    padding: 0.7rem 1.3rem;
+  }
+}
+
+.reserve-section button:hover {
+  color: var(--accent-color);
+  border: 2px solid var(--accent-color);
+  transition: 0.4s ease-in-out;
+}
+
+/* footer */
+
+footer {
+  background: rgba(0, 0, 0, 0.55);
+  box-shadow: 1px -8px 39px 20px rgba(0, 0, 0, 0.55);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  height: 15vh;
+  margin-bottom: 0;
+}
+
+footer > p {
+  margin: 1vmin;
+}
+
+footer > p > a {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  margin: 10px;
+  transition: 0.4s ease-in-out;
+}
+
+footer > p > a:hover {
+  color: var(--accent-color);
+  transition: 0.4s ease-in-out;
 }
