--- a/styles.css
+++ b/styles.css
@@ -51,41 +51,56 @@ body {
 
 /* styling the html */
 
-nav {
+.header {
   display: flex;
   justify-content: space-between;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  padding: 100px 100px 20px;
-  background: rgba(0, 0, 0, 0.5);
-  box-shadow: 1px 11px 39px 14px rgba(0, 0, 0, 0.55);
+  padding: 90px 90px 20px;
+  background: rgba(0, 0, 0, 0.65);
+  box-shadow: 1px 13px 35px 14px rgba(0, 0, 0, 0.65);
   z-index: 1;
+  transition: 0.2s ease-in-out;
 }
 
-.nav-items {
+.global-nav {
   display: flex;
-  width: 40vw;
+  justify-content: center;
+}
+
+.global-nav-ul {
+  display: flex;
+  width: 50vw;
   max-width: 800px;
   justify-content: space-between;
+
+  list-style-type: none;
 }
 
-.nav-items p {
+.global-nav-ul > li {
   transition: 0.4s ease-in-out;
+  text-decoration: none;
+  list-style-type: none;
+  color: #fff;
+  cursor: pointer;
 }
 
-.nav-items p:hover {
+.global-nav-ul > li:hover {
   cursor: pointer;
   color: var(--accent-color);
   transition: 0.4s ease-in-out;
 }
 
 .logo {
-  height: 60px;
+  font-size: 3rem;
+  transition: 0.4s ease-in-out;
+  color: white;
+  cursor: pointer;
 }
 
-/* #close-menu {
+#close-menu {
   display: none;
 }
 
@@ -94,15 +109,7 @@ nav {
   height: 40px;
   width: 40px;
   background-size: 40px;
-  margin: 20px;
-  margin-right: 40px;
-  display: none; so it doesn't show up at desktop size */
-
-/* grid */
-/* grid-column: 2/3;
-  grid-row: 1/2;
-  justify-self: end;
-  align-self: center;
+  display: none; /*so it doesn't show up at desktop size */
 }
 
 #close-menu {
@@ -115,9 +122,26 @@ nav {
   margin: 15px;
 }
 
+.header-small {
+  padding: 40px 40px 20px;
+
+  transition: 0.2s ease-in-out;
+}
+
 @media (max-width: 600px) {
+  .header {
+    padding: 40px 40px 20px;
+  }
+
+  .logo {
+    height: 40px;
+  }
+
+  .global-nav-ul {
+    height: 300px;
+  }
   .menu-open {
-    transform: translateX(-250px);
+    transform: translateX(-225px);
     transition: 0.2s ease-in-out;
     z-index: 1;
   }
@@ -127,11 +151,43 @@ nav {
     transition: 0.2s ease-in-out;
   }
 
+  .hamburger-hide {
+    opacity: 0;
+    transition: 0.2s ease-in-out;
+  }
+
   .hamburger-menu,
   #close-menu {
     display: block;
+    cursor: pointer;
   }
-} */
+
+  nav {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: -225px;
+    width: 225px;
+    height: 100vh;
+    transform: translateX(225px);
+
+    background: rgba(0, 0, 0, 0.9);
+
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+  }
+
+  nav ul {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  nav ul li {
+    flex-grow: 0;
+    align-self: flex-start;
+    margin-bottom: 20px;
+  }
+}
 
 main {
   display: grid;
@@ -147,8 +203,27 @@ main {
   }
 } */
 
-section {
-  margin: 200px 0;
+/* .section {
+  padding: 125px 0 275px 0;
+}
+
+.about-section {
+  padding: 200px 0;
+} */
+
+.section {
+  padding: 20vh 0;
+}
+
+.about-section,
+.reserve-section {
+  padding: 30vh 0;
+}
+
+@media (max-width: 900px) {
+  .about-section {
+    padding: 25vh 0;
+  }
 }
 
 .main-title-section {
@@ -173,13 +248,13 @@ section {
 
 @keyframes fade {
   0% {
-    opacity: 0.7;
+    opacity: 0.6;
   }
   50% {
     opacity: 1;
   }
   100% {
-    opacity: 0.7;
+    opacity: 0.6;
   }
 }
 
@@ -191,7 +266,6 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 30vh;
 }
 
 .about-text-container {
@@ -231,13 +305,7 @@ section {
 }
 
 .cabin-images {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   display: grid;
-
-  /* grid-template-rows: repeat(4fr);
-  grid-template-columns: repeat(5fr); */
 
   grid-template-columns: 3fr 4fr 3fr 4fr 2fr 4fr 2fr 5fr;
   grid-template-rows: 2fr 2fr 2fr 4fr 5fr 2fr;
@@ -250,6 +318,15 @@ section {
   margin: 10px;
   box-shadow: 1px 11px 39px 14px rgba(0, 0, 0, 0.55);
   transition: 0.4s ease-in-out;
+}
+
+@media (max-height: 1150px) {
+  .cabin-images {
+    max-width: 600px;
+  }
+  .cabin-images > img {
+    width: 175px;
+  }
 }
 
 @media (max-width: 700px) {
@@ -274,7 +351,7 @@ section {
   }
 }
 
-@media (min-width: 1400px) {
+@media (min-width: 1400px) and (min-height: 1250px) {
   .cabin-images > img {
     width: 300px;
   }
@@ -335,7 +412,7 @@ section {
 }
 
 .map-container:hover {
-  transform: scale(1.6);
+  transform: scale(1.2);
   transition: 0.4s ease-in-out;
 }
 
@@ -347,6 +424,12 @@ section {
   .map-container:hover {
     transform: scale(1);
     transition: 0.4s ease-in-out;
+  }
+}
+
+@media (max-height: 1150px) {
+  .map-container {
+    max-width: 600px;
   }
 }
 
@@ -369,14 +452,13 @@ section {
   border-radius: 10px;
   color: white;
   padding: 1rem 2rem;
-  cursor: pointer;
 
   transition: 0.4s ease-in-out;
 }
 
 @media (max-width: 550px) {
   .reserve-section button {
-    padding: 0.7rem 1.3rem;
+    padding: 0.6rem 1rem;
   }
 }
 
