--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ body {
   background-image: url("./images/forestDusk.jpg");
   background-size: auto 100vh;
   background-attachment: fixed;
+  position: relative; /* for back to top icon*/
 }
 
 /* styling the html */
@@ -448,6 +449,39 @@ main {
 .reserve-section button:hover {
   color: var(--accent-color);
   border: 2px solid var(--accent-color);
+  transition: 0.4s ease-in-out;
+}
+
+/* back to top icon */
+
+.back-to-top {
+  font-size: 2rem;
+  position: fixed;
+  bottom: 8vh;
+  right: 8vw;
+  transition: 0.4s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.back-to-top p {
+  font-size: 0.7rem;
+}
+
+.back-to-top i {
+  transition: 0.4s ease-in-out;
+  color: white;
+  cursor: pointer;
+}
+
+.back-to-top i:hover {
+  transition: 0.4s ease-in-out;
+  color: var(--accent-color);
+}
+
+.inactive {
+  opacity: 0;
   transition: 0.4s ease-in-out;
 }
 
